# c-c--skeleton

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/demo/: demo.cpp
cmake/: CMakeLists.txt.in  cmake.define  cmake.install  cmake.options  cmake.platform  cmake.version  jemalloc_CMakeLists.txt.in
tests/: CmakeLists.txt
